[gd_scene load_steps=8 format=2]

[ext_resource path="res://Zero_mod/Objects/Pickups/WeaponCollect.gd" type="Script" id=1]
[ext_resource path="res://Zero_mod/Objects/Pickups/weapon_collect.tres" type="SpriteFrames" id=2]
[ext_resource path="res://src/Sounds/12 - MMX - X Life Gain.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Sounds/14 - MMX - X Sub Tank-Heart Powerup.wav" type="AudioStream" id=4]
[ext_resource path="res://Zero_mod/Player/Weapons/B-Fan.tres" type="Resource" id=5]
[ext_resource path="res://src/Levels/Primrose/rotator.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 14.5 )

[node name="Weapon_Zero" type="Node2D"]
pause_mode = 2
z_index = 10
script = ExtResource( 1 )
weapon = ExtResource( 5 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, -14.5 )
shape = SubResource( 1 )

[node name="Weapon" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 0, -13 )
frames = ExtResource( 2 )
animation = "z_default"
playing = true

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.554
max_distance = 600.0
bus = "SFX"

[node name="audioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.554
max_distance = 600.0
bus = "SFX"

[node name="rotator" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
